@@ -111,11 +111,11 @@ typedef enum {
 /** All of the different configuration options */
 enum cgdbrc_option_kind {
     /* Arrow style is deprecated, use CGDBRC_EXECUTING_LINE_DISPLAY insetad */
-    CGDBRC_ANSIESCAPEPARSING,
     CGDBRC_ARROWSTYLE,
     CGDBRC_AUTOSOURCERELOAD,
     CGDBRC_CGDB_MODE_KEY,
     CGDBRC_COLOR,
+    CGDBRC_DEBUGWINCOLOR,
     CGDBRC_EXECUTING_LINE_DISPLAY,
     CGDBRC_IGNORECASE,
     CGDBRC_SELECTED_LINE_DISPLAY,
@@ -141,10 +141,10 @@ struct cgdbrc_config_option {
         /* option_kind == CGDBRC_EXECUTING_LINE_DISPLAY */
         /* option_kind == CGDBRC_SELECTED_LINE_DISPLAY */
         enum LineDisplayStyle line_display_style;
-        /* option_kind == CGDBRC_ANSIESCAPEPARSING */
         /* option_kind == CGDBRC_AUTOSOURCERELOAD */
         /* option_kind == CGDBRC_CGDB_MODE_KEY */
         /* option_kind == CGDBRC_COLOR */
+        /* option_kind == CGDBRC_DEBUGWINCOLOR */
         /* option_kind == CGDBRC_IGNORECASE */
         /* option_kind == CGDBRC_SHOWTGDBCOMMANDS */
         /* option_kind == CGDBRC_TABSTOP */
